2000-09-03  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/copyright: Added link to Gnocatan website

2000-08-26  Andy Heroff  <aheroff@mediaone.net>

	* Version 0.6.1 released!

	* configure.in: Version update to 0.6.1.

	* server/develop.c: In Road Building dev card code, modified code
	  so that when RB is complete, edges build during process are
	  removed from the build list. Affects ability to trade.

	* server/trade.c: In domestic trade code, added check for valid
	  trade conditions (No trade before the roll, and if strict trade is
	  active, no trade after building or buying a dev card).

	* client/help/C/gnocatan.sgml: Started to update help code. This is
	  by no means a finished product.

2000-08-25  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/control, debian/changelog: preparation for point release

2000-08-24  Daniel Kobras <kobras@tat.physik.uni-tuebingen.de>

	* configure.in: Fix handling of 'PROTOCOL_VERSION' so it shows
	up as a string in config.h, not as an int.

2000-08-21  Andy Heroff <aheroff@mediaone.net>

	* client/settingscreen.c: Modified justifications. Added i8n calls
	  to all text.

2000-08-21  Steve Langasek <vorlon@dodds.net>

	* server/player.c, client/client.c, acconfig.h, configure.in:
	Use a distinct protocol version number for client-server
	negotiation, so that versions of the client and server that behave
	compatibly will be able to connect to one another.

2000-08-18  Andy Heroff <aheroff@mediaone.net>

	* client/settingscreen.c, client/gui.c, client/client.h,
	  client/Makefile.am: Added file. Added game settings screen.

2000-08-06  Jeff Breidenbach <jeff@alum.mit.edu>

	* debian/control: Tweak build dependencies (Debian bug #68516)

2000-08-01  Andy Heroff  <aheroff@mediaone.net>

	* client/gui.c: Quick change to VP target text to make less
	  ambiguous.

	* server/turn.c: Added debug for 'too-many' error. In the future,
	  all errors should be unique in some way (An identifier after the