@@ -1,7 +1,7 @@
 title 5/6-player
 random-terrain
 domestic-trade
-num-players 2
+num-players 5
 victory-points 10
 num-roads 15
 num-settlements 5
