@@ -1,3 +1,10 @@
+2000-09-18  Andy Heroff  <aheroff@mediaone.net>
+
+	* server/5-6-player.game: Set default number of players to 5.
+
+	* server/buildutil.c: Fixed bug where any edge build (road, ship
+	  bridge) would count against total number of roads.
+
 2000-09-03  Jeff Breidenbach  <jeff@alum.mit.edu>
 
 	* debian/copyright: Added link to Gnocatan website
